--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ssr": "ng build && npm run serve:ssr:spotify",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:spotify": "node dist/spotify/server/server.mjs",
