--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,24 @@
 {
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/"
-        }
-    ]
+  "builds": [
+    {
+      "src": "api/function.mjs",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": "dist/spotify/**"
+      }
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist/spotify/browser"
+      }
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/function.mjs"
+    }
+  ]
 }
